cambioos post segunda entrega

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,13 +25,13 @@
                             <a href="../pages/lesbianas.html"><img src="../assets/imagenes/iconos/woman.png" alt="Lesbianas"></a>
                         </li>
                         <li class="nav-item">
-                            <a href="../pages/gays.html"><img src="../assets/imagenes/iconos/gay.png" alt="Gays">
+                            <a href="../pages/gays.html"><img src="../assets/imagenes/iconos/gay.png" alt="Gays"></a>
                         </li>
                         <li class="nav-item">
                             <a href="../pages/trans.html"><img src="../assets/imagenes/iconos/transgender.png" alt="Trans"></a>
                         </li>
                         <li class="nav-item">
-                            <a href="../pages/ingles.html"><img src="../assets/imagenes/iconos/ingles.png" alt="Ingles">
+                            <a href="../pages/ingles.html"><img src="../assets/imagenes/iconos/ingles.png" alt="Ingles"></a>
                         </li>
                         <li class="nav-item">
                             <a href="../pages/contacto.html"><img src="../assets/imagenes/iconos/sobre.png" alt="Contacto"></a>
