--- a/pages/gays.html
+++ b/pages/gays.html
@@ -21,12 +21,12 @@
                     <li><a href="../pages/trans.html"><img src="../assets/imagenes/iconos/transgender.png" alt="Trans"></a></li>
                     <li><a href="../pages/ingles.html"><img src="../assets/imagenes/iconos/ingles.png" alt="Ingles"></a></li>
                     <li><a href="../pages/contacto.html"><img src="../assets/imagenes/iconos/sobre.png"></a></li>
- 
                 </ul>
             </nav>
         </div>
     </header>
     <main class="grid-main-p">
+        <div class="rainbow"></div>
         <section class="titulo">
             <div>
                 <h1>Books About Us</h1>
