--- a/pages/ingles.html
+++ b/pages/ingles.html
@@ -26,6 +26,7 @@
         </div>
     </header>
     <main class="grid-main-p">
+        <div class="rainbow"></div>
         <section class="titulo">
             <div>
                 <h1>Books About Us</h1>
