--- a/pages/lesbianas.html
+++ b/pages/lesbianas.html
@@ -25,7 +25,8 @@
             </nav>
         </div>
     </header>
-    <main class= "grid-main-p" >
+    <main class= "grid-main-p">
+        <div class="rainbow"></div>
         <section class="titulo">
             <div>
                 <h1>Books About Us</h1>
