--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
     </header>
     <main class="grid-main">
+        <div class="rainbow"></div>
         <section class="sec-1">
             <div>
                 <h1>Books About Us</h1>
