sass en contactos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Books About Us</title>
+    <meta name="description" content="Recomendaciones de libros con temática LGBTQI+">
+    <meta name="keywords" content="literatura lgbt juvenil, best gay books">
+    <meta name="author" content="Carla Castellano">
+    <meta name="copyright" content="books-about-us">
+    <meta property="og: title" content="Libros LGBTIQ+">
+    <meta property="og:description" content="Recomendaciones de libros con temática LGBTIQ+">
+    <meta property="og image" content="">
+    <meta property="og url" content="">
+    <title>Contacto | Books About Us</title>
+    <link rel="shortcut icon" href="../assets/imagenes/BAU.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -41,8 +50,9 @@
             </div>
         </nav>
     </header>
-    <main class="container-fluid main-c">
-        <section class="titulo">
+    <main class="container-fluid">
+        <div class="rainbow"></div>
+        <section class="titulo titulo-c">
             <div>
                 <h1>Books About Us</h1>
             </div>
@@ -71,10 +81,10 @@
         </div>
     </main>
     <footer class="grid-footer">
-        <div class="fot-1">
+        <div class="fot-1 ">
             <a href="../index.html"> <img class="logo" src="../assets/imagenes/BAU.png" alt="Logo de la página"></a>
         </div>
-        <div class="fot-2">
+        <div class="fot-2 fot-c">
             <ul>
                 <li><a href="../pages/lesbianas.html">Lesbianas</a></li>
                 <li><a href="../pages/gays.html">Gays</a></li>
