--- a/pages/trans.html
+++ b/pages/trans.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Books About Us</title>
+    <meta name="description" content="Recomendaciones de libros con temática LGBTQI+">
+    <meta name="keywords" content="literatura lgbt juvenil, best gay books">
+    <meta name="author" content="Carla Castellano">
+    <meta name="copyright" content="books-about-us">
+    <meta property="og: title" content="Libros LGBTIQ+">
+    <meta property="og:description" content="Recomendaciones de libros con temática LGBTIQ+">
+    <meta property="og image" content="">
+    <meta property="og url" content="">
+    <title>Trans | Books About Us</title>
+    <link rel="shortcut icon" href="../assets/imagenes/BAU.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
