animación en botones

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -74,9 +74,13 @@
                 <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Dejá tu mensaje, pregunta o recomendación" rows="3"></textarea>
             </div>
-            <div>
+            <!-- <div>
                 <input class="boton" type="submit" value="Enviar">
                 <input class="boton" type="reset" value="Borrar">
+            </div> -->
+            <div>
+                <a href="#" class="btn"> Enviar</a>
+                <a href="#" class="btn"> Borrar</a>
             </div>
         </div>
     </main>
