--- a/pages/gays.html
+++ b/pages/gays.html
@@ -47,17 +47,17 @@
             </div>
         </section>
         <section class="tapas">
-            <div>
+            <div class="card">
                 <img class="cover" src="../assets/imagenes/book-covers/la-busqueda-del-cliche-perfecto.jpg" alt="La búqueda del cliché perfecto, tapa de libro." >
                 <h3>LA BUSQUEDA DEL CLICHE PERFECTO - MICHELLE DURAN</h3>
                 <p>Axel Waters odia a su hermano Ben, pero, sobre todo, odia a los mejores amigos de este. En especial a cierto rubio prepotente que no para de tocarle las narices. Axel y Ben son dos mellizos muy distintos entre sí. El primero es el friki del instituto, el bicho raro. El segundo es el popular, el presidente del consejo estudiantil. En el hogar Waters las peleas son una constante y ambos hermanos parecen condenados a no llevarse nunca bien. Todo cambia cuando la novia de Ben rompe con él y empieza a pasar más tiempo de lo normal en casa. Incapaz de aguantar la tensión más tiempo, Axel decide idear una estrategia que le permita librarse de él, sin saber que su vida está a punto de cambiar. Porque Key Parker, la estrella y el chico más adorado del instituto, ha descubierto que hay algo raro en su comportamiento y no está dispuesto a dejar escapar la oportunidad de molestar al irritante hermano de su mejor amigo.</p>
             </div>
-            <div>
+            <div class="card">
                 <img class="cover" src="../assets/imagenes/book-covers/la-melodia-del-corazon.jpg">
                 <h3>LA MELODIA DEL CORAZON - TAMARA MORAL</h3>
                 <p>Paris ha tenido que dejar toda su vida atrás para luchar por sus sueños. Está solo y se siente perdido. Lo único que le queda es la música, su piano y él contra el mundo, y no piensa rendirse. Romeo vive acomodado en la placidez de su rutina; entre su trabajo en la librería, su grupo de amigos, a los que considera su familia, y sus muchos amantes, simple diversión sin compromiso. Paris tiene miedo a fracasar. Romeo tiene miedo a arriesgarse. Juntos se ayudarán a afrontar sus miedos.</p>
             </div>
-            <div>
+            <div class="card">
                 <img class="cover" src="../assets/imagenes/book-covers/no-solo-eres-amor.jpg" alt="No sólo es amor, tapa de libro.">
                 <h3>NO SOLO ES AMOR - SONIA PUENTE</h3>
                 <p>Para él, la vida es risa y buen humor. Es un hombre romántico y un poco excéntrico, pero si algo lo caracteriza es su gran corazón y el amor que siente por su familia. Jake Evans nunca lo ha tenido fácil. Es discreto, tímido y apenas tiene tiempo libre por culpa de sus trabajos. Intenta no caer en los errores de su madre y se desvive por mantener a flote a su familia. Drew y Jake tienen muchas cosas en común, pero también un abismo que los separa. Porque las apariencias no lo son todo. Porque no hay que escapar al amor. Porque ¿y si se puede ser feliz?</p>
@@ -68,19 +68,19 @@
         <div class="fot-1">
             <a href="../index.html"> <img class="logo" src="../assets/imagenes/BAU.png" alt="Logo de la página"></a>
         </div>
-        <div class="fot-2">
+        <div class="card-l fot-2">
             <ul>
-                <li><a href="#">Lesbianas</a></li>
+                <li><a href="../pages/lesbianas.html">Lesbianas</a></li>
                 <li><a href="../pages/gays.html">Gays</a></li>
                 <li><a href="../pages/trans.html">Trans</a></li>
                 <li><a href="../pages/ingles.html">Inglés</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
-            </ul>
         </div>
-        <div class="fot-3">
-            <a href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp"></a>
-            <a href="https://twitter.com/carlacast89?t=Sejik0FYmQeTZZW63l4Xrw&s=08" target="_blank"><img class="icon" src="../assets/imagenes/iconos/twitter-logo.png" alt="Logo de twitter"></a>
-            <a href="https://instagram.com/booksaboutus.tuc?igshid=ZDdkNTZiNTM=" target="_blank"><img class="icon" src="../assets/imagenes/iconos/instagram-logo.png" alt="Logo de instagram"></a>
+        <div class="card-f fot-3">
+            <span>Seguinos</span>
+            <a class="social-link" href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp"></a>
+            <a class="social-link" href="https://twitter.com/carlacast89?t=Sejik0FYmQeTZZW63l4Xrw&s=08" target="_blank"><img class="icon" src="../assets/imagenes/iconos/twitter-logo.png" alt="Logo de twitter"></a></a>
+            <a class="social-link" href="https://instagram.com/booksaboutus.tuc?igshid=ZDdkNTZiNTM=" target="_blank"><img class="icon" src="../assets/imagenes/iconos/instagram-logo.png" alt="Logo de instagram"></a></a>
         </div>
     </footer>
 </body>
