--- a/pages/trans.html
+++ b/pages/trans.html
@@ -47,17 +47,17 @@
             </div>
         </section>
         <section class="tapas">
-            <div>
+            <div class="card">
                 <img class="cover" src="../assets/imagenes/book-covers/transitamos.jpg" alt="Transitamos, tapa de libro.">
                 <h3>TRANSITAMOS - IAN BERMÚDEZ RAVENTÓS; LUCÍA DE PALAU</h3>
                 <p>Javier ha tomado una decisión importante sobre su transición. Mientras tanto, su trabajo como profesor y las experiencias de sus amistades le harán abrir los ojos hacia el resto del colectivo y hacia las dificultades que aún tienen que superar las personas trans. El reencuentro con las amistades y la realidad de la escuela en la que trabaja despertarán sus ganas de crear un cambio en la sociedad. A partir de aquí, entrará en contacto con el activismo, se abrirá a una nueva red de afectos y, para su sorpresa, descubrirá emociones y sentimientos que nunca hubiera imaginado.</p>
             </div>
-            <div>
+            <div class="card">
                 <img class="cover" src="../assets/imagenes/book-covers/mi-hermano-se-llama-jessica.png" alt="Mi hermanos se llama Jéssica, tapa de libro.">
                 <h3>MI HERMANO SE LLAMA JESSICA - JOHN BOYNE</h3>
                 <p>Sam conoce a su hermana Jessica de toda la vida, pero hoy se encontrarán por primera vez. Sam Waver es un chico solitario al que le cuesta hacer amigos, y sus padres están tan ajetreados que a veces se siente invisible. Por suerte, cuenta con su hermano mayor, Jason, quien parece tener una vida perfecta: no sólo es encantador y popular, tambien es la estrella del equipo de fútbol, y todas las chicas están deseando salir con el. Sam lo idolatra. Sin embargo, un día, Jason reúne a su familia para contarle un secreto que lleva guardando mucho tiempo: en realidad se llama Jessica. Sus padres no dan credito y Sam descubre que no son las personas abiertas y tolerantes que creía. Las vidas de todos dan un vuelco y parece que las cosas nunca volverán a ser como antes...</p>
             </div>
-            <div>
+            <div class="card">
                 <img class="cover" src="../assets/imagenes/book-covers/stay-gold.png" alt="Stay gold, tapa de libro.">
                 <h3>STAY GOLD - TOBLY MCSMITH</h3>
                 <p>PONY solo quiere pasar desapercibido durante el último año de instituto. Cansado del interés que suscitaba después de declararse transgénero, espera un nuevo comienzo en Hillcrest High. GEORGIA empieza a sospechar que hay vida más allá de las animadoras y los chicos del equipo...</p>
@@ -68,19 +68,19 @@
         <div class="fot-1">
             <a href="../index.html"> <img class="logo" src="../assets/imagenes/BAU.png" alt="Logo de la página"></a>
         </div>
-        <div class="fot-2">
+        <div class="card-l fot-2">
             <ul>
                 <li><a href="../pages/lesbianas.html">Lesbianas</a></li>
                 <li><a href="../pages/gays.html">Gays</a></li>
-                <li><a href="#">Trans</a></li>
+                <li><a href="../pages/trans.html">Trans</a></li>
                 <li><a href="../pages/ingles.html">Inglés</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
-            </ul>
         </div>
-        <div class="fot-3">
-            <a href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp"></a>
-            <a href="https://twitter.com/carlacast89?t=Sejik0FYmQeTZZW63l4Xrw&s=08" target="_blank"><img class="icon" src="../assets/imagenes/iconos/twitter-logo.png" alt="Logo de twitter"></a>
-            <a href="https://instagram.com/booksaboutus.tuc?igshid=ZDdkNTZiNTM=" target="_blank"><img class="icon" src="../assets/imagenes/iconos/instagram-logo.png" alt="Logo de instagram"></a>
+        <div class="card-f fot-3">
+            <span>Seguinos</span>
+            <a class="social-link" href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp"></a>
+            <a class="social-link" href="https://twitter.com/carlacast89?t=Sejik0FYmQeTZZW63l4Xrw&s=08" target="_blank"><img class="icon" src="../assets/imagenes/iconos/twitter-logo.png" alt="Logo de twitter"></a></a>
+            <a class="social-link" href="https://instagram.com/booksaboutus.tuc?igshid=ZDdkNTZiNTM=" target="_blank"><img class="icon" src="../assets/imagenes/iconos/instagram-logo.png" alt="Logo de instagram"></a></a>
         </div>
     </footer>
 </body>
