--- a/pages/lesbianas.html
+++ b/pages/lesbianas.html
@@ -47,18 +47,18 @@
             </div>
         </section>
         <section class="tapas">
-            <div>
+            <div class="card">
                 <img class="cover" src="../assets/imagenes/book-covers/la-ultima-parada.jpg" alt="Una última parada, tapa de libro">
                 <h3>UNA ÚLTIMA PARADA - CASEY MCQUISTON</h3>
                 <p>August, una joven de veintitrés años, no cree en casi nada. Ni en los videntes, ni en las amistades que se entablan con facilidad, ni en encontrar esa clase de amor que sale en las películas. Entonces llega Jane. La misteriosa e imposible Jane. Con mucho carácter, una sonrisa amable y el cabello alborotado, aparece para ayudar a August cuando ella más lo necesita. Jane es la persona que August sueña encontrarse en el vagón del metro día tras día. Pero pronto se topa con un gran problema: Jane no solo parece una punk de los setenta, lo es. Está atrapada en esa línea de metro y August tendrá que utilizar todo lo que ha intentado dejar atrás para ayudarla. Después de todo, quizá haya llegado el momento de empezar a creer en ciertas cosas.</p>
             </div>
-            <div>
+            <div class="card">
                 <img class="cover" src="../assets/imagenes/book-covers/odio-al-gato.jpg" alt="Odio al gato, tapa de libro">
                 <h3>¡ODIO AL GATO! - L. FARINELI</h3>
                 <p>Anett es manicurista y tiene que atender a decenas de clientas para pagar la renta de su diminuto apartamento y tener cierta tranquilidad económica. La cuestión es que no siempre las cosas le salen bien y suele terminar mal parada. Hasta que un día su buzón rebosa con la correspondencia de un abogado, que la llevará de vuelta al pasado que creyó haber dejado atrás. Sorana es estilista y vive despreocupada de la vida. Eso sí, no tiene en sus planes enamorarse; no después de que le destrozaron en el corazón. En esta historia, Maurice es el tercer protagonista. O el primero, depende de cómo se mire. El punto es que es el gato de Sorana y, según Anett, es un delincuente.
                     </p>
             </div>
-            <div>
+            <div class="card">
                 <img class="cover" src="../assets/imagenes/book-covers/hecha-de-estrerllas.jpg" alt="Hecha de estrerllas, tapa de libro">
                 <h3>HECHA DE ESTRELLAS - ASHLEY HERRING BLAKE </h3>
                 <p>Mara y Owen son los gemelos más cercanos del mundo. Así que cuando él es acusado de violación; ella no sabe qué pensar. ¿Puede su hermano ser culpable de algo tan atroz? Dividida entre el amor por su familia y su sentido de la justicia; Mara deberá hacerle frente a un trauma del pasado que le impide ser libre y ser fuerte para enfrentar la realidad de su presente.</p>
@@ -69,19 +69,20 @@
         <div class="fot-1">
             <a href="../index.html"> <img class="logo" src="../assets/imagenes/BAU.png" alt="Logo de la página"></a>
         </div>
-        <div class="fot-2">
+        <div class="card-l fot-2">
             <ul>
-                <li><a href="#">Lesbianas</a></li>
+                <li><a href="../pages/lesbianas.html">Lesbianas</a></li>
                 <li><a href="../pages/gays.html">Gays</a></li>
                 <li><a href="../pages/trans.html">Trans</a></li>
                 <li><a href="../pages/ingles.html">Inglés</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
-            </ul>
         </div>
-        <div class="fot-3">
-            <a href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp"></a>
-            <a href="https://twitter.com/carlacast89?t=Sejik0FYmQeTZZW63l4Xrw&s=08" target="_blank"><img class="icon" src="../assets/imagenes/iconos/twitter-logo.png" alt="Logo de twitter"></a>
-            <a href="https://instagram.com/booksaboutus.tuc?igshid=ZDdkNTZiNTM=" target="_blank"><img class="icon" src="../assets/imagenes/iconos/instagram-logo.png" alt="Logo de instagram"></a>
+        </div>
+        <div class="card-f fot-3">
+            <span>Seguinos</span>
+            <a class="social-link" href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp"></a>
+            <a class="social-link" href="https://twitter.com/carlacast89?t=Sejik0FYmQeTZZW63l4Xrw&s=08" target="_blank"><img class="icon" src="../assets/imagenes/iconos/twitter-logo.png" alt="Logo de twitter"></a></a>
+            <a class="social-link" href="https://instagram.com/booksaboutus.tuc?igshid=ZDdkNTZiNTM=" target="_blank"><img class="icon" src="../assets/imagenes/iconos/instagram-logo.png" alt="Logo de instagram"></a></a>
         </div>
     </footer>
 </body>
