--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Recomendaciones de libros con temática LGBTQI+">
-    <meta name="keywords" content="literatura lgbt juvenil, best gay books">
+    <meta name="keywords" content="literatura lgbt juvenil, best gay books, litaruta juvenil, libros lgbt, libros gays, libros con temática lgbt">
     <meta name="author" content="Carla Castellano">
     <meta name="copyright" content="books-about-us">
     <meta property="og: title" content="Libros LGBTIQ+">
@@ -39,11 +39,11 @@
         <section class="sec-1">
             <div>
                 <h1>Books About Us</h1>
-                <p>Libros sobre nosotres, porque también queremos vernos reflejados en las historias</p>
+                <p>Porque también queremos vernos reflejados en las historias</p>
             </div>
         </section>
         <section class="sec-2">
-            <h2>¡Hola! En esta web vas a encontrar recomendaciones de libros con temática LGBTIQ+.</h2>
+            <h2>¡Hola! En esta web queremos recomendarte la mejor selección de libros con temática LGBTIQ+. Vas a encontrar novelas y libros de ficción donde los personajes tienen diversas orientaciones sexuales y una mirada diferente que, por fin, toma su protagonismo.</h2>
         </section>
         <section class="sec-3">
             <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos, tapa de libro">
