corrigiendo margenes y paddings

--- a/pages/lesbianas.html
+++ b/pages/lesbianas.html
@@ -55,8 +55,7 @@
             <div class="card">
                 <img class="cover" src="../assets/imagenes/book-covers/odio-al-gato.jpg" alt="Odio al gato, tapa de libro">
                 <h3>¡ODIO AL GATO! - L. FARINELI</h3>
-                <p>Anett es manicurista y tiene que atender a decenas de clientas para pagar la renta de su diminuto apartamento y tener cierta tranquilidad económica. La cuestión es que no siempre las cosas le salen bien y suele terminar mal parada. Hasta que un día su buzón rebosa con la correspondencia de un abogado, que la llevará de vuelta al pasado que creyó haber dejado atrás. Sorana es estilista y vive despreocupada de la vida. Eso sí, no tiene en sus planes enamorarse; no después de que le destrozaron en el corazón. En esta historia, Maurice es el tercer protagonista. O el primero, depende de cómo se mire. El punto es que es el gato de Sorana y, según Anett, es un delincuente.
-                    </p>
+                <p>Anett es manicurista y tiene que atender a decenas de clientas para pagar la renta de su diminuto apartamento y tener cierta tranquilidad económica. La cuestión es que no siempre las cosas le salen bien y suele terminar mal parada. Hasta que un día su buzón rebosa con la correspondencia de un abogado, que la llevará de vuelta al pasado que creyó haber dejado atrás. Sorana es estilista y vive despreocupada de la vida. Eso sí, no tiene en sus planes enamorarse; no después de que le destrozaron en el corazón. En esta historia, Maurice es el tercer protagonista. O el primero, depende de cómo se mire. El punto es que es el gato de Sorana y, según Anett, es un delincuente.</p>
             </div>
             <div class="card">
                 <img class="cover" src="../assets/imagenes/book-covers/hecha-de-estrerllas.jpg" alt="Hecha de estrerllas, tapa de libro">
