banner en pages les

--- a/pages/lesbianas.html
+++ b/pages/lesbianas.html
@@ -36,9 +36,11 @@
     </header>
     <main class= "grid-main-p">
         <div class="rainbow"></div>
-        <section class="titulo">
+        <section class="banner titulo">
             <div>
                 <h1>Books About Us</h1>
+                <p>"Mi mejor descubrimiento, mi paso más valiente, la mujer mas impresionante, el amor mas puro, mi letra favorita"</p>
+                <p>Sí, si es contigo. - Calle y Poche</p>
             </div>
         </section>
         <section class="subtitulo">
