banner y carrousel index

--- a/index.html
+++ b/index.html
@@ -39,23 +39,60 @@
         <section class="sec-1">
             <div>
                 <h1>Books About Us</h1>
-                <p>Porque también queremos vernos reflejados en las historias</p>
             </div>
         </section>
         <section class="sec-2">
-            <h2>¡Hola! En esta web queremos recomendarte la mejor selección de libros con temática LGBTIQ+. Vas a encontrar novelas y libros de ficción donde los personajes tienen diversas orientaciones sexuales y una mirada diferente que, por fin, toma su protagonismo.</h2>
+            <h2>Que la literatura tiene un poder incalculable para empoderar y concientiziar a la sociedad sobre la diversidad del mundo es incuestionable. Los libros nos ayudan a visibilizarnos, nos dan voz, sirven de plataforma para dar a conocer nuestras historias. También nos hacen pensar, y nos educan, en cierto modo, sobre temas y aspectos que nunca nos habíamos planteado.
+                En esta web queremos recomendarte la mejor selección de libros con temática LGBTIQ+. Vas a encontrar novelas y libros de ficción donde los personajes tienen diversas orientaciones sexuales y una mirada diferente que, por fin, toma su protagonismo.</h2>
         </section>
-        <section class="sec-3">
-            <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos, tapa de libro">
-            <p>Recomendación</p>
+        <div>
+            <h3>Tenemos diferentes categorías pensadas para vos</h3>
+        </div>
+        <section class="sec-3 carrousel">
+            <h4>CHICAS QUE AMAN A CHICAS</h4>
+            <a href="./pages/lesbianas.html">
+                <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
+            </a>
         </section>
-        <section class="sec-4">
-            <img class="cover" src="./assets/imagenes/book-covers/melt-with-you.jpg" alt="Melt with you, tapa de libro">
-            <p>¡Nuevo lanzamiento!</p>
+        <section class="sec-4 carrousel">
+            <h4>CHICO CONOCE A CHICO</h4>
+            <a href="./pages/gays.html">
+                <img src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
+                <img src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
+                <img src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
+                <img src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
+                <img src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
+                <img src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
+                <img src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
+                <img src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
+            </a>
         </section>
-        <section class="sec-5">
-            <iframe src="https://www.youtube.com/embed/4g0kbnMGI8o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <p>Otras recomendaciones</p>
+        <section class="sec-5 carrousel">
+            <img src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
+            <img src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
+            <img src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
+            <img src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
+            <img src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
+            <img src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
+            <img src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
+            <img src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
+        </section>
+        <section class="sec-6 carrousel">
+            <img src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
+            <img src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
+            <img src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
+            <img src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
+            <img src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
+            <img src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
+            <img src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
+            <img src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
         </section>
     </main>
     <footer class="grid-footer">
