cambios en index

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main class="grid-main">
         <div class="rainbow"></div>
         <section class="sec-1">
-            <div>
+            <div class="bg-h1">
                 <h1>Books About Us</h1>
             </div>
         </section>
@@ -59,40 +59,47 @@
                 <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
                 <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
                 <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/hasta-que-una-firma-nos-separe.jpg" alt="Hasta que una firma nos separe - Portada de libro">
             </a>
         </section>
         <section class="sec-4 carrousel">
             <h4>CHICO CONOCE A CHICO</h4>
             <a href="./pages/gays.html">
-                <img src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
-                <img src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
-                <img src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
-                <img src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
-                <img src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
-                <img src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
-                <img src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
-                <img src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
+                <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
             </a>
         </section>
         <section class="sec-5 carrousel">
-            <img src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
-            <img src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
-            <img src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
-            <img src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
-            <img src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
-            <img src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
-            <img src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
-            <img src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
+            <h4>NO TODO ES BLANCO O NEGRO</h4>
+            <a href="./pages/trans.html">
+            <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
+            <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
+            <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
+            <img class="cover" src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
+            <img class="cover" src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
+            <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
+            <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
+            <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
+            </a>
         </section>
         <section class="sec-6 carrousel">
-            <img src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
-            <img src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
-            <img src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
-            <img src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
-            <img src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
-            <img src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
-            <img src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
-            <img src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
+            <h4>EN EL IDIOMA ORIGINAL</h4>
+            <a href="./pages/ingles.html">
+            <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
+            <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
+            <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
+            <img class="cover" src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
+            <img class="cover" src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
+            <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
+            <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
+            <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
+            </a>
         </section>
     </main>
     <footer class="grid-footer">
